fixed min-height of message input to align with other inputs

--- a/main.css
+++ b/main.css
@@ -225,7 +225,7 @@ label, input {
 
 .message {
     min-height: 200px;
-    min-width: 430px;
+    min-width: 482px;
 }
 
 .form-button {
